--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "vue": "^2.6.14",
     "vue-select": "^3.16.0"
   }
